<resources>
    <string name="app_name">哎聊</string>
    <string name="userName">用户名：</string>
    <string name="passWord">  密码：</string>
    <string name="IpUserName">请输入用户名</string>
    <string name="IpPassWord">请输入密码</string>
    <string name="login">登录</string>
    <string name="information">消息</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="register">注册</string>
    <string name="loging">加载中</string>
    <string name="surePassWord">确认密码:</string>
    <string name="friend">联系人</string>
    <string name="dialogue">个人会话</string>
    <string name="end">退出当前账号</string>
    <string name="set">设置</string>
    <string name="nodialogue">您还没有收到任何消息！</string>
    <string name="save">发送</string>
    <string name="content">请输入聊天内容</string>
</resources>
