<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="24"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_eighty"
        android:layout_marginTop="@dimen/activity_twenty"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/messge_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:text="@string/information" />

        <TextView
            android:id="@+id/friend_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:text="@string/friend" />

        <TextView
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:text="@string/set" />
    </LinearLayout>


</LinearLayout>
